CHANGELOG
--------------------------

ClanSphere 2011.3 Patch 2 >> 2012-XX-XX
___________________________________________________________

-> Changed notifymods to contain a hint for files and board mod functionality (hajo)
-> Updated jQuery to 1.7.2 (hajo)


ClanSphere 2011.3 Patch 1 >> 2012-03-31
___________________________________________________________

-- New default template and theme made by Seron with optimizations by equal

-> Fixed board file handling issues (patches by Tazzernator)
-> Fixed category sorting in rules manage (palle!)
-> Fixed forward not translated in messages mod (hajo)
-> Fixed new countries not usable due to database limitations (reported by mindcrime)
-> Fixed no selection error message in maps mod not working (hajo)
-> Updated checks, information and links from svn to git (hajo)


ClanSphere 2011.3 >> 2012-03-02 [Last Release]
___________________________________________________________

-- Recommended PHP version changed to 5.4.0

-> Added caching support for a given number of seconds [ttl] (hajo)
-> Added caching support for wincache extension (hajo)
-> Added forwarding support to messages mod (fr33z3m4n)
-> Added new country icons and dropdown entries (hajo)
-> Fixed email line-endings and user email activation issues (hajo)
-> Fixed language switching problems (hajo)
-> Fixed options and removal in maps mod (palle!)
-> Fixed php error handling with @ sign (hajo)
-> Fixed some sql queries that don't follow the standard (patches by pico)
-> Improved magic_quotes detection and handling (hajo)
-> Improved support for IPv6 (hajo, fr33z3m4n)
-> Removed author from news rss feed (hajo)
-> Reworked servers mod and added ttl caching (fr33z3m4n)
-> Updated jQuery to 1.7.1 (hajo)

-- Fixed a few bugs that were reported at "Trac" --


ClanSphere 2011.2.1 >> 2011-11-01
___________________________________________________________

-- Recommended PHP version changed to 5.3.8

-> Escaped html form output in cash mod (jam2)