@@ -5,6 +5,7 @@ ClanSphere 2011.3 Patch 2 >> 2012-XX-XX
 ___________________________________________________________
 
 -> Changed notifymods to contain a hint for files and board mod functionality (hajo)
+-> Fixed pagination in medals list not working (reported by astmaih)
 -> Updated jQuery to 1.7.2 (hajo)
 
 
